fix station list table layout broken below 650px
the tr-as-flex thing should always apply

--- a/src/station-list.scss
+++ b/src/station-list.scss
@@ -37,12 +37,17 @@ div#station-list {
     }
   }
   tr {
+    display: flex;
+    justify-content: space-between;
     border-bottom: solid 1px #0000002b;
     line-height: 2.4;
     margin: 0;
     & :nth-child(3),
     & :nth-child(4) {
       display: none;
+    }
+    & :nth-child(2) {
+      width: 10%;
     }
     /* Station list separators: border-bottom on all elements except last */
     &:nth-last-child(1) {
@@ -58,8 +63,6 @@ div#station-list {
       // & :nth-child(1) {
       //   width: 60%;
       // }
-      display: flex;
-      justify-content: space-between;
       & :nth-child(1) {
         flex: 3;
       }
